Fri Jun 10 05:19:24 GMT 2011  Olly Betts <olly@survex.com>

	* tests/Makefile.am: Actually include soaktest/Makefile.mk.

Thu Jun 09 23:26:52 GMT 2011  Olly Betts <olly@survex.com>

	* docs/doxygen_api.conf.in,docs/doxygen_source.conf.in: Define
	  XAPIAN_DEPRECATED_CLASS to empty for doxygen.

Thu Jun 09 22:21:29 GMT 2011  Olly Betts <olly@survex.com>

	* docs/overview.rst: Document "remote" in stub databases.

Thu Jun 09 15:23:12 GMT 2011  Olly Betts <olly@survex.com>

	* HACKING,docs/deprecation.rst,include/xapian/deprecated.h,
	  include/xapian/keymaker.h: Add XAPIAN_DEPRECATED_CLASS macro
	  for marking a class as deprecated, so we don't have to call
	  XAPIAN_DEPRECATED() with no parameters.

Thu Jun 09 14:03:17 GMT 2011  Olly Betts <olly@survex.com>

	* HACKING: Clarify wording about PATH.

Thu Jun 09 13:04:53 GMT 2011  Olly Betts <olly@survex.com>

	* docs/queryparser.rst,include/xapian/queryparser.h,
	  queryparser/queryparser.cc,queryparser/queryparser.lemony,
	  queryparser/queryparser_internal.h,tests/queryparsertest.cc: Add
	  QueryParser::set_max_wildcard_expansion() method to allow limiting
	  the number of terms a wildcard can expand to.  Implementation mostly
	  from a patch by Adam Sjøgren in ticket#350.

Tue Jun 07 23:16:33 GMT 2011  Dan Colish <dcolish@gmail.com>

	* backends/brass/brass_changesetapplier.h,
	  backends/chert/chert_changesetapplier.h,
	  backends/flint/flint_changesetapplier.h: Remove dead code

Thu Jun 02 13:21:28 GMT 2011  Olly Betts <olly@survex.com>

	* AUTHORS: Add recent bug reporters.

Thu Jun 02 11:03:57 GMT 2011  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: If default_op is OP_NEAR or
	  OP_PHRASE then disable stemming of the terms, since we don't index
	  positional information for stemmed terms by default.
	* tests/queryparsertest.cc: Adjust near1 and phrase1 to act as
	  regression tests for this fix.

Thu Jun 02 02:58:58 GMT 2011  Olly Betts <olly@survex.com>
