@@ -115,9 +115,9 @@ bin_SCRIPTS = xapian-config
 
 DISTCLEANFILES += xapian-config
 
-EXTRA_DIST = ChangeLog ChangeLog.examples HACKING PLATFORMS xapian-core.spec \
- include/xapian/error.h include/xapian/errordispatch.h generate-exceptions \
- exception_data.pm preautoreconf dir_contents
+EXTRA_DIST = ChangeLog ChangeLog.0 ChangeLog.examples HACKING PLATFORMS \
+ xapian-core.spec include/xapian/error.h include/xapian/errordispatch.h \
+ generate-exceptions exception_data.pm preautoreconf dir_contents
 
 cmakedir = $(libdir)/cmake/xapian
 cmake_DATA = cmake/xapian-config.cmake cmake/xapian-config-version.cmake
